--- a/.github/workflows/bigquery-actions.yaml
+++ b/.github/workflows/bigquery-actions.yaml
@@ -1,20 +1,19 @@
 name: bigquery deploy
-- uses: actions/checkout@v4
-  with:
-    sparse-checkout: .
+jobs:
+  - uses: actions/checkout@v4
+    with:
+      sparse-checkout: .
     
-- name: Checkout
-  uses: actions/checkout@v4
 
-- name: Collect data
-  run: |
-    echo "TIMESTAMP=$(date --utc +%FT%T%Z)" >> $GITHUB_ENV
+  - name: Collect data
+    run: |
+      echo "TIMESTAMP=$(date --utc +%FT%T%Z)" >> $GITHUB_ENV
 
-- name: Write to DWH
-  uses: Staffbase/bigquery-github-action@v1.1.0
-  with:
-    credentials_json: ${{ secrets.YOUR_SERVICE_ACCOUNT_KEY }}
-    bigquery_project: fresh-catwalk-438015-b4
-    bigquery_dataset: DeaAnalitycs
-    bigquery_table: test
-    payload_json: '{ "property": "${{ env.TIMESTAMP }} this is a test"}'
+  - name: Write to DWH
+    uses: Staffbase/bigquery-github-action@v1.1.0
+    with:
+      credentials_json: ${{ secrets.YOUR_SERVICE_ACCOUNT_KEY }}
+      bigquery_project: fresh-catwalk-438015-b4
+      bigquery_dataset: DeaAnalitycs
+      bigquery_table: test
+      payload_json: '{ "property": "${{ env.TIMESTAMP }} this is a test"}'
